src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3012.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram CD4AC3012 {

	class A;
	class B;
	
	association assoc1 <<theStereoType>> A -> B;
	association protected A -> B;
	
	association assoc1 A -> B <<theStereoType>>;
	association public A -> B protected;
}